# DataAnalytics

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  setup.sh
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_security_scans.py  003_audit_logs.py  004_file_versions.py  005_csv_data.py  006_fix_csv_data_id.py  007_dataset_groups.py  008_generated_insights.py  009_analysis_jobs.py  010_model_results.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
backend/app/auth/: __init__.py  auth_service.py  dependencies.py  jwt_utils.py  password_utils.py
backend/app/middleware/: security.py  timing.py
backend/app/models/: __init__.py  analysis_job.py  audit_log.py  csv_data.py  dataset_group.py  file_version.py  generated_insight.py  model_result.py  security_scan.py  uploaded_file.py  user.py  user_session.py
backend/app/routers/: asset_integrity.py  assets.py  audit.py  auth.py  business.py  (+15 more)
backend/tests/: conftest.py  test_asset_integrity.py  test_assets.py  test_audit.py  test_auth.py  test_background_jobs.py  test_business_analytics_service.py  test_classification_service.py  test_clustering_pca.py  test_config.py  test_csv_ragged.py  test_database.py  test_dataset_groups.py  test_eda_background.py  test_eda_charts.py  test_eda_service.py  test_errors.py  test_explainability_service.py  test_health.py  test_insight_service.py  test_model_results.py  test_monitoring.py  test_plugins.py  test_quick_scan_export.py  test_recommendation_service.py  test_regression_service.py  test_report_charts.py  test_security_scan.py  test_sql_analysis.py  test_timeseries.py  test_upload.py  test_versioning.py  test_xlsx_conversion.py
(+216 files in other folders)
