[project]
name = "predictive-security-analytics-lab-backend"
version = "0.1.0"
description = "Backend API for predictive security analytics lab"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
ignore_missing_imports = true
disable_error_code = ["misc", "assignment", "no-any-return", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app/services"]
omit = ["app/services/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B608", "B310"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
